--- a/build.gradle
+++ b/build.gradle
@@ -25,3 +25,11 @@ allprojects {
 task clean(type: Delete) {
     delete rootProject.buildDir
 }
+
+allprojects {
+        gradle.projectsEvaluated {
+                tasks.withType(JavaCompile) {
+                        options.compilerArgs << "-Xlint:deprecation"
+                }
+        }
+}
