--- a/build.gradle
+++ b/build.gradle
@@ -19,6 +19,7 @@ allprojects {
     repositories {
         google()
         jcenter()
+        maven { url "https://jitpack.io" }
     }
 }
 
@@ -29,7 +30,7 @@ task clean(type: Delete) {
 allprojects {
         gradle.projectsEvaluated {
                 tasks.withType(JavaCompile) {
-                        options.compilerArgs << "-Xlint:deprecation"
+                        options.compilerArgs << "-Xlint:deprecation" << "-Xlint:unchecked"
                 }
         }
 }
